# document-prep-starter

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: benchmark-challenge.md  config.yml  showcase.md
.github/workflows/: ci.yml
docs/: social-launch-kit-zh-TW.md  threat-model.md
examples/: demo.md
scripts/: keyword_guard.py
src/markitdown_prep/: __init__.py  cli.py  core.py
tests/: test_core.py
